doctor-pataient input-wrap design fixed

--- a/src/Doctor/Pages/PatientForm/PatientForm.css
+++ b/src/Doctor/Pages/PatientForm/PatientForm.css
@@ -77,9 +77,16 @@
 }
 
 .input-wrap {
-  height: 40px;
+  height: 60px !important;
   width: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 20px !important;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start !important;
+}
+.input-wrap label{
+  text-align: start !important;
+  /* border: 2px solid blue; */
 }
 
 .more-input-wrap {
